--- a/Welcome/.gitattributes
+++ b/Welcome/.gitattributes
@@ -3,3 +3,8 @@
 *.scss linguist-vendored
 *.js linguist-vendored
 CHANGELOG.md export-ignore
+
+.idea
+_ide_helper.php
+_ide_helper_models.php
+.phpstorm.meta.php
