--- a/Welcome/composer.json
+++ b/Welcome/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=7.1.0",
+        "barryvdh/laravel-ide-helper": "^2.6",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "~1.0"
     },
