--- a/Welcome/composer.json
+++ b/Welcome/composer.json
@@ -8,7 +8,8 @@
         "php": ">=7.1.0",
         "barryvdh/laravel-ide-helper": "^2.6",
         "laravel/framework": "5.6.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "maatwebsite/excel": "^3.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
