--- a/Welcome/composer.json
+++ b/Welcome/composer.json
@@ -9,7 +9,8 @@
         "barryvdh/laravel-ide-helper": "^2.6",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "~1.0",
-        "maatwebsite/excel": "^3.1"
+        "maatwebsite/excel": "^3.1",
+        "doctrine/dbal": "~2.3"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
