修改构建文件位置

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ php:
 service:
   - mysql
 before_script:
+  - cd Welcome/
   - composer install
   - composer dump-autoload
   - cp .env.travis .env
