--- a/Welcome/composer.json
+++ b/Welcome/composer.json
@@ -7,10 +7,11 @@
     "require": {
         "php": ">=7.1.0",
         "barryvdh/laravel-ide-helper": "^2.6",
+        "doctrine/dbal": "~2.3",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "~1.0",
         "maatwebsite/excel": "^3.1",
-        "doctrine/dbal": "~2.3"
+        "ofcold/identity-card": "^3.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
