--- a/Welcome/composer.json
+++ b/Welcome/composer.json
@@ -8,6 +8,7 @@
         "php": ">=7.1.0",
         "barryvdh/laravel-ide-helper": "^2.6",
         "doctrine/dbal": "~2.3",
+        "illuminate/html": "^5.0",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "~1.0",
         "maatwebsite/excel": "^3.1",
